Exibindo os dados no cartão dinamicamente

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="cc-extra">
             <div class="cc-expiration">
               <div class="label">Expiração</div>
-              <div class="value">02/32</div>
+              <div class="value">22/11</div>
             </div>
             <div class="cc-security">
               <div class="label">CVC</div>
@@ -157,7 +157,7 @@
           </div>
         </div>
 
-        <button>ADICIONAR CARTÃO</button>
+        <button id="add-card">ADICIONAR CARTÃO</button>
       </form>
     </div>
 
